# Component-Management-System

./: .gitignore  README.md  app.py  component_management_system.py  db_test.py  pyproject.toml  run.sh
component_management_system/: __init__.py  app.py  component_management.db  config.py  database.py  models.py  people.db  people.py  schema.py  swagger.yml
component_management_system/app/components/: operations.py  schema.py
component_management_system/app/database/: base.py  (+3 more)
component_management_system/components/: models.py  operations.py  schemas.py
component_management_system/data/: put_data.py
component_management_system/database/: __init__.py  db.py  definations.py  types.py  utils.py  validation.py
component_management_system/elastic_search/: elastify.py
component_management_system/files/: operations.py  schemas.py
component_management_system/licenses/: db_entry.py  models.py  operations.py  schemas.py
component_management_system/metadatas/: models.py  operations.py  schemas.py
component_management_system/tags/: models.py  operations.py  schemas.py
component_management_system/utils/: __init__.py  pagination.py
src/: __init__.py  config.py  logger.py
src/app/: __init__.py  app.py  authentication.py  authentication_middleware.py  routes.py  swagger.yml
src/authentication/: auth.py  github_OAuth.py  services.py  utils.py
src/database/: __init__.py  base.py  definations.py  guid.py  utils.py
src/log/: handlers.py  logger.py
src/validation/: __init__.py  exceptions.py  validators.py
test/: files.json  tags.txt  tst.py
tests/: tst.py
(+79 files in other folders)
